fix: FAQ Item CSS pt 2 on mobile

--- a/public/static/styles/style.css
+++ b/public/static/styles/style.css
@@ -106,6 +106,7 @@ footer {
 
 .FAQ__answer p {
   margin-top: 8px;
+  text-align: justify;
 }
 
 .FAQ__answer p:first-child {
